Replaced my recursive find with a package that does the same thing. Less code.

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 	"dependencies": {
 		"coffee-script": "latest",
 		"logging": "latest",
-		"async": "latest"
+		"async": "latest",
+		"find": "latest"
 	}
 }
