Shoving into update_database function. Also scraping information from id3 tags.

--- a/config.json
+++ b/config.json
@@ -1,5 +1,7 @@
 {
 	"port": 1338,
-	"directories": [ "/home/robert/Music" ],
-	"echonest_api_key": "some_key"
+	"directories": [ "/home/robert/Music/rodriguez_cold-fact/" ],
+	"echonest_api_key": "some_key",
+	"database_url": "http://localhost:5984/",
+	"database_db": "music-player"
 }
