--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"coffee-script": "latest",
 		"logging": "latest",
 		"async": "latest",
-		"find": "latest"
+		"find": "latest",
+		"mp3info": "latest"
 	}
 }
