Valid rate limiting. Confirmed working. Next step is artist and title validation before the queries..

--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
 	"port": 1338,
-	"directories": [ "/home/robert/Music/Blue Man Group - Audio/" ],
-	"echonest_api_key": "....",
+	"directories": [ "/home/robert/Music/" ],
+	"echonest_api_key": "...",
 	"database_url": "http://localhost",
 	"database_port": 5984,
 	"database_db": "music-player"
