Basic express stub. Listening on given config port.

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"find": "latest",
 		"mp3info": "latest",
 		"cradle": "latest",
-		"echonest": "latest"
+		"echonest": "latest",
+		"express": "latest"
 	}
 }
