Basic visualization. Also some jPlayer work.

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"mp3info": "latest",
 		"cradle": "latest",
 		"echonest": "latest",
-		"express": "latest"
+		"express": "latest",
+		"sylvester": "latest"
 	}
 }
