--- a/package.json
+++ b/package.json
@@ -1,17 +1,12 @@
 {
 	"name": "music-player",
 	"description": "Music Player",
-	"version": "0.0.1",
+	"version": "0.2.0",
 	"private": true,
 	"dependencies": {
-		"coffee-script": "latest",
-		"logging": "latest",
-		"async": "latest",
-		"find": "latest",
-		"mp3info": "latest",
-		"cradle": "latest",
-		"echonest": "latest",
-		"express": "latest",
-		"sylvester": "latest"
+		"async": "0.9.0",
+		"ember-cli": "0.1.2",
+		"find": "0.1.7",
+		"express": "4.10.1"
 	}
 }
